--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,12 @@
   grid-template-columns: 2fr 10fr;
   
 }
+.app-wrapper-content{
 
+    grid-area: c;
+   background-color: darkkhaki;
+    
+}
 
 
 
