Props for Dialogs and Style for this component

--- a/src/Components/Dialogs/Dialogs.module.css
+++ b/src/Components/Dialogs/Dialogs.module.css
@@ -5,15 +5,19 @@
 .dialogsItems{
  padding: 10px;
 }
-.item{
+/* .item{
 
-}
+} */
 .dialogsItems .active{
     color: sandybrown;
 }
-.messages{
+/* .messages{
 padding: 10px;
 }
 .message{
 
+} */
+
+.item a{
+  text-decoration: none;
 }
